--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,4 +1,3 @@
-@CHARSET "EUC-KR";
 
 footer, footer#solstice-footer {
     background: url("../assets/footer-bg.jpg") no-repeat center center #242426;
@@ -51,18 +50,17 @@ footer .nav, footer#solstice-footer .nav {
     margin-bottom: 25px;
 }
 
-footer #logo-kma-white, footer#solstice-footer #logo-kma-white {
-    margin-bottom: 15px;
-}
+
 #copyright img {
     float: left;
-   /* margin-top: 10px;*/
+    margin-top: 5px;
     margin-right: 15px;
     clear: both;
 }
 footer #logo-kma-white, footer#solstice-footer #logo-kma-white {
-    margin-bottom: 15px;
+  /*   margin-bottom: 15px; */
 }
+
 img {
     vertical-align: middle;
 }
