--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,4 +1,17 @@
 
+.social-media{
+	/* margin-top:57px; */
+	font-size:28px;
+}
+
+.social-media>li {
+    display: inline-block;
+    padding-right: 1px; 
+    padding-left: 3px;
+}
+
+/* .social-media a:hover{color:#155789}  lineNo 128 */
+
 footer, footer#solstice-footer {
     background: url("../assets/footer-bg.jpg") no-repeat center center #242426;
     -webkit-background-size: cover;
@@ -53,8 +66,8 @@ footer .nav, footer#solstice-footer .nav {
 
 #copyright img {
     float: left;
-    margin-top: 5px;
-    margin-right: 15px;
+    margin-top: 7px;
+    margin-right: 5px;
     clear: both;
 }
 footer #logo-kma-white, footer#solstice-footer #logo-kma-white {
@@ -75,6 +88,7 @@ img {
 p {
     margin: 0 0 10px;
 }
+
 
 
 footer li, footer#solstice-footer li {
@@ -120,15 +134,8 @@ footer .nav a, footer#solstice-footer .nav a {
     padding: 6px 15px 6px 20px;
 }
 footer a:hover, footer#solstice-footer a:hover {
-    color: #f7941e;
-}
-footer a:link, footer#solstice-footer a:link, footer a:active, footer#solstice-footer a:active, footer a:visited, footer#solstice-footer a:visited {
-    color: #a8a7a9;
-    font-weight: 400;
-}
-footer a:link, footer#solstice-footer a:link, footer a:active, footer#solstice-footer a:active, footer a:visited, footer#solstice-footer a:visited {
-    color: #a8a7a9;
-    font-weight: 400;
+    /* color: #f7941e;  */
+    color: #79a4ca;
 }
 footer .nav a:hover, footer#solstice-footer .nav a:hover {
     background: none;
